Fix about body blur tile flickering on Chrome and some z-fighting for onhovers

--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -52,6 +52,8 @@
 .face-container {
   position: sticky;
   top: 24px;
+
+  z-index: 1;
 }
 
 .face {
